@@ -1,0 +1,9 @@
+Title: Fixed wrong scaling of check-mk-host-service host check command
+Level: 1
+Component: checks
+Compatible: compat
+Version: 1.2.8p19
+Date: 1488463507
+Class: fix
+
+
